<resources>
    <string name="app_name">Herramienta_Trastorno_Habla</string>
    <string name="text_email">Correo Electronico</string>
    <string name="text_contrasena">Contraseña</string>
    <string name="btn_login">Ingresar</string>
    <string name="btn_registro">Registrarse</string>
    <string name="txt_nombret">Nombre(s)</string>
    <string name="Nombre_tepareuta">Nombre</string>
    <string name="txt_apellido_tp">Apellido Paterno</string>
    <string name="txt_apellidopt">Apellido paterno</string>
    <string name="Apellido_mt">Apellido materno</string>
    <string name="Apellidomt">Apellido Materno</string>
    <string name="Titulo_t">Titulo</string>
    <string name="titulo_t">Titulo</string>
    <string name="Especialidad">Especialidad</string>
    <string name="Telefono_t">Telefono</string>
    <string name="Direccion">Dirección</string>
    <string name="Cedula_Profesional">Cedula Profesional</string>
    <string name="Correo_terapeuta">Correo Electronico</string>
    <string name="text_contraseña">Contraseña</string>
    <string name="Terminos">Terminos y condiciones</string>
    <string name="Datos_de_tutor">Datos de tutor 1</string>
    <string name="Datos_tutor_2">Datos del tutor 2</string>

    <!--Datos del paciente-->
    <string name="Datos_tutor">Datos del tutor</string>
    <string name="Datos_personales">Datos Personales</string>
    <string name="Nombre_paci">Nombre(s):</string>
    <string name="Apellido_P">Apellido Paterno:</string>
    <string name="Apellido_M">Apellido Materno:</string>
    <string name="Fecha_nac">Fecha de nacimiento:</string>
    <string name="Lugar">Lugar en la familia:</string>
    <string name="Direccion_paci">Dirección:</string>
    <string name="Telefono_paci">Teléfono:</string>
    <string name="Escuela">Escuela:</string>

    <!--DATOS DEL CUADRO DE OPCIONES-->
    <string name="elija_opcion">Elija una opción</string>
    <string name="Consultar">Consultar</string>
    <string name="Editar">Editar</string>
    <string name="Eliminar">Eliminar</string>
    <string name="Agregar">Agregar</string>
    <string name="Descargar">Descargar</string>


</resources>