<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrarseActivity">


    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="364dp"
        android:layout_height="443dp"
        android:layout_marginTop="92dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.448"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="33dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txt_nombre"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/txt_nombret" />

            <EditText
                android:id="@+id/nombreterapeuta"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ems="10"
                android:inputType="textPersonName" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="37dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txt_apellidopt"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:text="@string/txt_apellidopt" />

            <EditText
                android:id="@+id/Apellidopt"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ems="10"
                android:inputType="textPersonName" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="41dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txt_apellidomt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Apellido_mt" />

            <EditText
                android:id="@+id/Apellidomat"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ems="10"
                android:inputType="textPersonName" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txt_titulot"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/Titulo_t" />

            <EditText
                android:id="@+id/text_titulot"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ems="10"
                android:inputType="textPersonName" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txt_especialidadt"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/Especialidad" />

            <EditText
                android:id="@+id/Text_especialidad"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ems="10"
                android:inputType="textPersonName" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txt_direccion"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/Direccion" />

            <EditText
                android:id="@+id/text_direcciont"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ems="10"
                android:inputType="textPersonName" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txt_cedulapt"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/Cedula_Profesional" />

            <EditText
                android:id="@+id/Text_cedula"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:ems="10"
                android:inputType="textPersonName" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txt_telefonot"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/Telefono_t" />

            <EditText
                android:id="@+id/Text_telefonot"
                android:layout_width="match_parent"
                android:layout_height="33dp"
                android:ems="10"
                android:inputType="phone" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txt_correot"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/Correo_terapeuta" />

            <EditText
                android:id="@+id/text_correot"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:ems="10"
                android:inputType="textEmailAddress" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txt_contrasenat"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/text_contraseña" />

            <EditText
                android:id="@+id/text_contrasena"
                android:layout_width="match_parent"
                android:layout_height="31dp"
                android:ems="10"
                android:inputType="textPassword" />
        </LinearLayout>
    </LinearLayout>

    <CheckBox
        android:id="@+id/Terminos_condiciones"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="@string/Terminos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout5" />

    <Button
        android:id="@+id/btn_registrarse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/btn_registro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Terminos_condiciones" />

</androidx.constraintlayout.widget.ConstraintLayout>